@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
  <description>eea.epub profile</description>
- <version>4.0</version>
+ <version>4.5</version>
 </metadata>
