@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_properties" meta_type="Plone Properties Tool">
+    <object name="site_properties" meta_type="Plone Property Sheet">
+    <property name="clean_epub_file_names" type="boolean">True</property>
+    </object>
+</object>
