@@ -3,6 +3,13 @@
 
 4.5-dev - (unreleased)
 ----------------------
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for eea.epub
+  [ichimdav #3621]
+* Feature: use filename id when creating plone content, cleaning the filename
+  id when it contains illegal characters if boolean property 
+  clean_epub_filename is enabled at portal_properties/site_properties
+  [ichimdav #3621]
 
 4.4 - (2012-06-12)
 ------------------
@@ -13,8 +20,8 @@
 
 4.3 - (2012-04-26)
 ------------------
-* Feature: import epubs that are not created by Adobe Indesign which have the images
-  and the html pages in separate folder like those created by Sigil
+* Feature: import epubs that are not created by Adobe Indesign which have the 
+  images and the html pages in separate folder like those created by Sigil
   [ichimdav #5054] 
 
 4.2 - (2012-02-06)
@@ -28,7 +35,8 @@
 
 4.0-dev - (2011-11-06)
 ----------------------
-* Bug fix: proper parsing of html entities by using an html parser instead of an xml one 
+* Bug fix: proper parsing of html entities by using an html parser instead of 
+  an xml one 
   [ichimdav #4523]
 * Bug fix: cleaned spaces defined as &nbsp that can't be read as xml
   [ichimdav #4271]
